redo some of the sessions

--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -132,23 +132,24 @@
    "outputs": [],
    "source": [
     "# Exercise 3.1\n",
-    "\n",
+    "reload(tx)\n",
     "from ecc import PrivateKey\n",
     "from helper import decode_base58, p2pkh_script, SIGHASH_ALL\n",
     "from script import Script\n",
     "from tx import TxIn, TxOut, Tx\n",
     "\n",
-    "prev_tx = bytes.fromhex('2758794a7a5c68ecd8b813f20fa3058adfcafa68c60afe499edbc3eba42d10a8')\n",
+    "prev_tx = bytes.fromhex('0025bc3c0fa8b7eb55b9437fdbd016870d18e0df0ace7bc9864efc38414147c8')\n",
     "prev_index = 0\n",
     "target_address = 'mnrVtF8DWjMu839VW3rBfgYaAfKk8983Xf'\n",
     "target_amount = 0.02\n",
     "change_address = 'mzx5YhAH9kNHtcN481u6WkjeHjYtVeKVh2'\n",
-    "change_amount = 0.029\n",
-    "secret = 1800555555518005555555\n",
+    "change_amount = 1.07\n",
+    "secret = 8675309\n",
     "priv = PrivateKey(secret=secret)\n",
     "\n",
     "# initialize inputs\n",
     "# create a new tx input\n",
+    "\n",
     "# initialize outputs\n",
     "# decode the hash160 from the target address\n",
     "# convert hash160 to p2pkh script\n",
@@ -158,9 +159,23 @@
     "# convert hash160 to p2pkh script\n",
     "# convert change amount to satoshis (multiply by 100 million)\n",
     "# create a new tx output for target\n",
-    "# create a new tx\n",
+    "\n",
+    "# create the transaction\n",
     "\n",
     "# now sign the 0th input with the private key using SIGHASH_ALL using sign_input\n",
+    "\n",
+    "# SANITY CHECK: change address corresponds to private key\n",
+    "if priv.point.address(testnet=True) != change_address:\n",
+    "    raise RuntimeError('Private Key does not correspond to Change Address, check priv_key and change_address')\n",
+    "\n",
+    "# SANITY CHECK: output's script_pubkey is the same one as your address\n",
+    "if tx_ins[0].script_pubkey(testnet=True).elements[2] != decode_base58(change_address):\n",
+    "    raise RuntimeError('Output is not something you can spend with this private key. Check that the prev_tx and prev_index are correct')\n",
+    "\n",
+    "# SANITY CHECK: fee is reasonable\n",
+    "if tx_obj.fee() > 0.05*100000000 or tx_obj.fee() <= 0:\n",
+    "    raise RuntimeError('Check that the change amount is reasonable. Fee is {}'.format(tx_obj.fee()))\n",
+    "\n",
     "# serialize and hex()"
    ]
   },
