--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -76,6 +76,10 @@
     "76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac\n",
     "```\n",
     "\n",
+    "Remember the structure of pay-to-pubkey-hash (p2pkh) which has `OP_DUP OP_HASH160 <hash> OP_EQUALVERIFY OP_CHECKSIG`.\n",
+    "\n",
+    "You need to grab the hash160 and turn that into an address.\n",
+    "\n",
     "#### 3.2. Make [this test](/edit/session6/script.py) pass\n",
     "```\n",
     "script.py:ScriptTest:test_address\n",
@@ -178,28 +182,13 @@
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "bin_block = bytes.fromhex(hex_block)\n",
+    "# bytes.fromhex to get the binary block\n",
     "# create a stream using BytesIO\n",
-    "stream = BytesIO(bin_block)\n",
     "# parse the block\n",
-    "b = Block.parse(stream)\n",
     "# get the version\n",
-    "version = b.version\n",
     "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
-    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
     "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
-    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
-    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
-    "print('BIP141: {}'.format(version >> 1 & 1 == 1))\n",
-    "\n",
-    "# get the version\n",
-    "version = b.version\n",
-    "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
-    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
-    "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
-    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
-    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
-    "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
+    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141"
    ]
   },
   {
@@ -282,6 +271,18 @@
     "f2881718\n",
     "```\n",
     "\n",
+    "Bits to target formula is \n",
+    "\n",
+    "\\\\(coefficient\\cdot2^{8\\cdot(exponent-3)}\\\\) \n",
+    "\n",
+    "where coefficient is the first three bytes in little endian and exponent is the last byte.\n",
+    "\n",
+    "Target to Difficulty formula is \n",
+    "\n",
+    "\\\\(difficulty = min / target\\\\)\n",
+    "\n",
+    "where \\\\(min = 0xffff\\cdot2^{8\\cdot(0x1d-3)}\\\\)\n",
+    "\n",
     "#### 6.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_target\n",
@@ -334,6 +335,8 @@
     "```\n",
     "04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1\n",
     "```\n",
+    "\n",
+    "Check that the proof-of-work (double-sha256 interpreted as a little-endian number) is lower than the target.\n",
     "\n",
     "#### 7.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
