--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -103,8 +103,9 @@
     "hashes = [bytes.fromhex(x) for x in hex_hashes]\n",
     "parent_level = []\n",
     "for i in range(0, len(hex_hashes), 2):\n",
-    "    parent_level.append(merkle_parent(hashes[i], hashes[i+1]))\n",
-    "print([x.hex() for x in parent_level])"
+    "    parent = merkle_parent(hashes[i], hashes[i+1])\n",
+    "    print(parent.hex())\n",
+    "    parent_level.append(parent)"
    ]
   },
   {
@@ -189,8 +190,9 @@
     "    hashes.append(hashes[-1])\n",
     "parent_level = []\n",
     "for i in range(0, len(hex_hashes), 2):\n",
-    "    parent_level.append(merkle_parent(hashes[i], hashes[i+1]))\n",
-    "print([x.hex() for x in parent_level])"
+    "    parent = merkle_parent(hashes[i], hashes[i+1])\n",
+    "    print(parent.hex())\n",
+    "    parent_level.append(parent)"
    ]
   },
   {
@@ -338,7 +340,7 @@
     "# initialize current level to be the hashes\n",
     "# loop until current_level has only 1 element\n",
     "    # make the current level the parent level\n",
-    "# print the root's hex\n"
+    "# print the root's hex"
    ]
   },
   {
@@ -526,7 +528,7 @@
    "outputs": [],
    "source": [
     "# Merkle Proof Example\n",
-    "from block import Block\n",
+    "from block import Block, Proof\n",
     "from helper import int_to_little_endian, merkle_path\n",
     "\n",
     "hex_tx_hashes = [\n",
@@ -549,6 +551,7 @@
     "    \"8e694f5092f6a644ab587ca445f9e949e4f5991d3c3c72bd4574a7c9896a2402\",\n",
     "    \"9cc887977168f430f4f896dfc6fc7379834733ce938abe7cd8a1a668d1ea1841\",\n",
     "]\n",
+    "tx_hash = bytes.fromhex('9b74f89fa3f93e71ff2c241f32945d877281a6a50a6bf94adac002980aafe5ab')\n",
     "b = Block(\n",
     "    version=536870914,\n",
     "    prev_block=bytes.fromhex('00000000000002dda81fd83ac5b944ad88592a213bfaf54bffad68725c782639'),\n",
@@ -559,17 +562,18 @@
     "    tx_hashes=[bytes.fromhex(h) for h in hex_tx_hashes],\n",
     ")\n",
     "b.calculate_merkle_tree()\n",
-    "index = 10\n",
-    "merkle_proof = []\n",
+    "index = b.tx_hashes.index(tx_hash)\n",
+    "proof_hashes = []\n",
     "current_index = index\n",
     "for level in b.merkle_tree:\n",
     "    if current_index % 2 == 1:\n",
     "        partner = current_index - 1\n",
     "    else:\n",
     "        partner = current_index + 1\n",
-    "    merkle_proof.append(level[partner])\n",
+    "    proof_hashes.append(level[partner])\n",
     "    current_index //= 2\n",
-    "print(index, merkle_proof)"
+    "proof = Proof(b.merkle_root, tx_hash, index, proof_hashes)\n",
+    "print(proof)"
    ]
   },
   {
@@ -651,7 +655,8 @@
     "    # partner is at the level's partner index\n",
     "    # add the partner to proof hashes\n",
     "    # update current_index to be integer divide by 2\n",
-    "# print the index and proof hashes\n"
+    "# create the Proof object\n",
+    "# print the proof"
    ]
   },
   {
@@ -751,6 +756,8 @@
    "source": [
     "### Exercise 9\n",
     "\n",
+    "#### Check the cheat sheet for the network message structure.\n",
+    "\n",
     "#### 9.1. Parse this message\n",
     "```\n",
     "f9beb4d976657261636b000000000000000000005df6e0e2\n",
@@ -828,7 +835,9 @@
     "\n",
     "Use https://bitnodes.earn.com/nodes/ to find nodes to connect to.\n",
     "\n",
-    "#### 11.1. Run the code below and parse some messages"
+    "#### 11.1. Run the code below and parse some messages\n",
+    "\n",
+    "#### Bonus: Run the connect.py script in the terminal to see how asynchronous connections can work"
    ]
   },
   {
