--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "Remember the % operator does the actual modulo operation. Also remember that + and - need to be in () because in the order of operations % comes before + and -.\n",
+    "Remember the % operator does the actual modulo operation. Also remember that `+` and `-` need to be in `()` because in the order of operations `%` comes before `+` and `-`.\n",
     "\n",
     "#### 1.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
