--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(192,105) is on the curve\n",
+      "(17,56) is on the curve\n",
+      "(200,119) is not on the curve\n",
+      "(1,193) is on the curve\n",
+      "(42,99) is not on the curve\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1.1\n",
     "\n",
@@ -51,15 +63,34 @@
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
+    "    x = FieldElement(x_raw, prime)\n",
+    "    y = FieldElement(y_raw, prime)\n",
     "    # try initializing, RuntimeError means not on curve\n",
-    "    # p = Point(x, y, a, b)"
+    "    # p = Point(x, y, a, b)\n",
+    "    try:\n",
+    "        p = Point(x, y, a, b)\n",
+    "        print('({},{}) is on the curve'.format(x_raw, y_raw))\n",
+    "    except RuntimeError:\n",
+    "        print('({},{}) is not on the curve'.format(x_raw, y_raw))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1.2\n",
     "\n",
@@ -86,9 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(FieldElement_223(192),FieldElement_223(105)) + Point(FieldElement_223(17),FieldElement_223(56)) = Point(FieldElement_223(170),FieldElement_223(142))\n",
+      "Point(FieldElement_223(47),FieldElement_223(71)) + Point(FieldElement_223(117),FieldElement_223(141)) = Point(FieldElement_223(60),FieldElement_223(139))\n",
+      "Point(FieldElement_223(143),FieldElement_223(98)) + Point(FieldElement_223(76),FieldElement_223(66)) = Point(FieldElement_223(47),FieldElement_223(71))\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.1\n",
     "\n",
@@ -108,14 +149,33 @@
     "    # p1 = Point(x1, y1, a, b)\n",
     "    # x2 = FieldElement(x2_raw, prime)\n",
     "    # y2 = FieldElement(y2_raw, prime)\n",
-    "    # p2 = Point(x2, y2, a, b)"
+    "    # p2 = Point(x2, y2, a, b)\n",
+    "    x1 = FieldElement(x1_raw, prime)\n",
+    "    y1 = FieldElement(y1_raw, prime)\n",
+    "    p1 = Point(x1, y1, a, b)\n",
+    "    x2 = FieldElement(x2_raw, prime)\n",
+    "    y2 = FieldElement(y2_raw, prime)\n",
+    "    p2 = Point(x2, y2, a, b)\n",
+    "    print('{} + {} = {}'.format(p1, p2, p1+p2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.2\n",
     "\n",
@@ -139,9 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(FieldElement_223(49),FieldElement_223(71))\n",
+      "Point(FieldElement_223(64),FieldElement_223(168))\n",
+      "Point(FieldElement_223(36),FieldElement_223(111))\n",
+      "Point(FieldElement_223(194),FieldElement_223(51))\n",
+      "Point(FieldElement_223(116),FieldElement_223(55))\n",
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.1\n",
     "\n",
@@ -159,10 +232,17 @@
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
     "    # p = Point(x, y, a, b)\n",
+    "    x = FieldElement(x_raw, prime)\n",
+    "    y = FieldElement(y_raw, prime)\n",
+    "    p = Point(x, y, a, b)\n",
     "    # start product at 0 (point at infinity)\n",
+    "    product = Point(None, None, a, b)\n",
     "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
+    "    for _ in range(s):\n",
     "        # add the point to the product\n",
-    "    # print product"
+    "        product = product + p\n",
+    "    # print product    \n",
+    "    print(product)"
    ]
   },
   {
@@ -187,9 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.1\n",
     "\n",
@@ -205,18 +293,36 @@
     "inf = Point(None, None, a, b)\n",
     "\n",
     "# start product at point\n",
+    "product = p\n",
     "# start counter at 1\n",
+    "counter = 1\n",
     "# loop until you get point at infinity (0)\n",
+    "while product != inf:\n",
     "    # add the point to the product\n",
+    "    product += p\n",
     "    # increment counter\n",
-    "# print counter"
+    "    counter += 1\n",
+    "# print counter\n",
+    "print(counter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.2/4.3\n",
     "\n",
@@ -226,9 +332,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Confirgming G is on the curve\n",
     "p = 2**256 - 2**32 - 977\n",
@@ -239,9 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "# Confirming order of G is n\n",
     "from ecc import G\n",
@@ -252,9 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(9680241112d370b56da22eb535745d9e314380e568229e09f7241066003bc471,ddac2d377f03c201ffa0419d6596d10327d6c70313bb492ff495f946285d8f38)\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting the public point from a secret\n",
     "from ecc import G\n",
@@ -283,9 +413,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(5cbdf0646e5db4eaa398f365f2ea7a0e3d419b7e0330e39ce92bddedcac4f9bc,6aebca40ba255960a3178d6d861a54dba813d0b813fde7b5a5082628087264da)\n",
+      "Point(c982196a7466fbbbb0e27a940b6af926c1a74d5ad07128c82824a11b5398afda,7a91f9eae64438afb9ce6448a1c133db2d8fb9254e4546b6f001637d50901f55)\n",
+      "Point(8f68b9d2f63b5f339239c1ad981f162ee88c5678723ea3351b7b444c9ec4c0da,662a9f2dba063986de1d90c2b6be215dbbea2cfe95510bfdf23cbf79501fff82)\n",
+      "Point(9577ff57c8234558f293df502ca4f09cbc65a6572c842b39b366f21717945116,10b49c67fa9365ad7b90dab070be339a1daf9052373ec30ffae4f72d5e66d053)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5.1\n",
     "\n",
@@ -294,14 +435,28 @@
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
     "\n",
     "# iterate over secrets\n",
-    "    # get the public point"
+    "for secret in secrets:\n",
+    "    # get the public point\n",
+    "    print(secret*G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.205s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5.2\n",
     "\n",
@@ -328,9 +483,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "049d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d56fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9\n",
+      "039d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5\n",
+      "04a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b\n",
+      "03a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5\n",
+      "04aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3\n",
+      "03aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.1\n",
     "\n",
@@ -339,17 +507,38 @@
     "secrets = (999**3, 123, 42424242)\n",
     "\n",
     "# iterate through secrets\n",
+    "for secret in secrets:\n",
     "    # get public point\n",
+    "    point = secret * G\n",
     "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
     "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
-    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise"
+    "    uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
+    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
+    "    if point.y.num % 2 == 1:\n",
+    "        compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
+    "    else:\n",
+    "        compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
+    "    print(uncompressed.hex())\n",
+    "    print(compressed.hex())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.160s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.2\n",
     "\n",
@@ -378,9 +567,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "148dY81A9BmdpMhvYEVznrM45kWN32vSCN\n",
+      "mieaqB68xDCtbUBYFoUNcmZNwk74xcBfTP\n",
+      "1S6g2xBJSED7Qr9CYZib5f4PYVhHZiVfj\n",
+      "mfx3y63A7TfTtXKkv7Y6QzsPFY6QCBCXiP\n",
+      "1226JSptcStqn4Yq9aAmNXdwdc2ixuH9nb\n",
+      "mgY3bVusRUL6ZB2Ss999CSrGVbdRwVpM8s\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7.1\n",
     "from ecc import G\n",
@@ -397,19 +599,39 @@
     "# iterate through components\n",
     "for compressed, secret in components:\n",
     "    # get the public point\n",
+    "    point = secret * G\n",
     "    # get the sec format\n",
+    "    sec = point.sec(compressed)\n",
     "    # hash160 the result\n",
+    "    h160 = hash160(sec)\n",
     "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
+    "    for prefix in (b'\\x00', b'\\x6f'):\n",
+    "        raw = prefix + h160\n",
     "        # get the double_sha256 of the prefix + h160, first 4 bytes are the checksum\n",
+    "        checksum = double_sha256(raw)[:4]\n",
     "        # append checksum\n",
-    "        # encode_base58 the whole thing"
+    "        total = raw + checksum\n",
+    "        # encode_base58 the whole thing\n",
+    "        print(encode_base58(total).decode('ascii'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.170s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7.2\n",
     "\n",
@@ -430,9 +652,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "miKegze5FQNCnGw6PKyqUbYUeBa4x2hFeM\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 8.1\n",
     "from ecc import G\n",
@@ -441,117 +671,9 @@
     "secret = 1800555555518005555555\n",
     "\n",
     "# get the public point\n",
-    "# if you completed 7.2, just do the .address(testnet=True) method on the public point"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Signing Example\n",
-    "from random import randint\n",
-    "\n",
-    "from ecc import G, N\n",
-    "\n",
-    "secret = 4\n",
-    "z = randint(0, 2**256)\n",
-    "k = randint(0, 2**256)\n",
-    "r = (k*G).x.num\n",
-    "s = (z+r*secret) * pow(k, N-2, N) % N\n",
-    "print(hex(z), hex(r), hex(s))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Verification Example\n",
-    "from ecc import G, N, S256Point\n",
-    "\n",
-    "z = 0x524c14a77b666d906fbe56973becf3b3b9eac65442774473c68407e89c5659de\n",
-    "r = 0xc0824a3ccdf3482f1435ef1917fad4a1d5573a15f0fa18a9b81dc76a941c4a3c\n",
-    "s = 0x84ada30118411ef3f1777690d3dc182c289e04486375e91ba73bc48c51c59da7\n",
-    "point = S256Point(\n",
-    "0xe493dbf1c10d80f3581e4904930b1404cc6c13900ee0758474fa94abe8c4cd13, 0x51ed993ea0d455b75642e2098ea51448d967ae33bfbdfe40cfe97bdc47739922)\n",
-    "\n",
-    "u = z * pow(s, N-2, N) % N\n",
-    "v = r * pow(s, N-2, N) % N\n",
-    "print((u*G + v*point).x.num == r)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 9\n",
-    "\n",
-    "#### 9.1. Which sigs are valid?\n",
-    "\n",
-    "```\n",
-    "P = (887387e452b8eacc4acfde10d9aaf7f6d9a0f975aabb10d006e4da568744d06c, \n",
-    "     61de6d95231cd89026e286df3b6ae4a894a3378e393e93a0f45b666329a0ae34)\n",
-    "z, r, s = ec208baa0fc1c19f708a9ca96fdeff3ac3f230bb4a7ba4aede4942ad003c0f60,\n",
-    "          ac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395,\n",
-    "          68342ceff8935ededd102dd876ffd6ba72d6a427a3edb13d26eb0781cb423c4\n",
-    "z, r, s = 7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d,\n",
-    "          eff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c,\n",
-    "          c7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6\n",
-    "```\n",
-    "\n",
-    "#### 9.2. Make [these tests](/edit/session2/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:S256Test:test_verify\n",
-    "ecc.py:PrivateKeyTest:test_sign\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 9.1\n",
-    "\n",
-    "from ecc import S256Point, G, N\n",
-    "\n",
-    "px = 0x887387e452b8eacc4acfde10d9aaf7f6d9a0f975aabb10d006e4da568744d06c\n",
-    "py = 0x61de6d95231cd89026e286df3b6ae4a894a3378e393e93a0f45b666329a0ae34\n",
-    "\n",
-    "signatures = (\n",
-    "    # (z, r, s)\n",
-    "    (0xec208baa0fc1c19f708a9ca96fdeff3ac3f230bb4a7ba4aede4942ad003c0f60,\n",
-    "     0xac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395,\n",
-    "     0x68342ceff8935ededd102dd876ffd6ba72d6a427a3edb13d26eb0781cb423c4),\n",
-    "    (0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d,\n",
-    "     0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c,\n",
-    "     0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6),\n",
-    ")\n",
-    "\n",
-    "# initialize the public point\n",
-    "# use: S256Point(x-coordinate, y-coordinate)\n",
-    "\n",
-    "# iterate over signatures\n",
-    "for z, r, s in signatures:\n",
-    "    # u = z / s, v = r / s\n",
-    "    # finally, uG+vP should have the x-coordinate equal to r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 9.2\n",
-    "\n",
-    "reload(ecc)\n",
-    "run_test(ecc.S256Test('test_verify'))\n",
-    "run_test(ecc.PrivateKeyTest('test_sign'))"
+    "point = secret*G\n",
+    "# if you completed 7.2, just do the .address(testnet=True) method on the public point\n",
+    "print(point.address(testnet=True))"
    ]
   }
  ],
