--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -40,7 +40,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -76,7 +76,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -99,6 +99,10 @@
     "```\n",
     "76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac\n",
     "```\n",
+    "\n",
+    "Remember the structure of pay-to-pubkey-hash (p2pkh) which has `OP_DUP OP_HASH160 <hash> OP_EQUALVERIFY OP_CHECKSIG`.\n",
+    "\n",
+    "You need to grab the hash160 and turn that into an address.\n",
     "\n",
     "#### 3.2. Make [this test](/edit/session6/script.py) pass\n",
     "```\n",
@@ -221,12 +225,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -320,7 +324,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -403,6 +407,18 @@
     "f2881718\n",
     "```\n",
     "\n",
+    "Bits to target formula is \n",
+    "\n",
+    "\\\\(coefficient\\cdot2^{8\\cdot(exponent-3)}\\\\) \n",
+    "\n",
+    "where coefficient is the first three bytes in little endian and exponent is the last byte.\n",
+    "\n",
+    "Target to Difficulty formula is \n",
+    "\n",
+    "\\\\(difficulty = min / target\\\\)\n",
+    "\n",
+    "where \\\\(min = 0xffff\\cdot2^{8\\cdot(0x1d-3)}\\\\)\n",
+    "\n",
     "#### 6.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_target\n",
@@ -464,7 +480,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -487,6 +503,8 @@
     "```\n",
     "04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1\n",
     "```\n",
+    "\n",
+    "Check that the proof-of-work (double-sha256 interpreted as a little-endian number) is lower than the target.\n",
     "\n",
     "#### 7.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
