--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "# Confirgming G is on the curve\n",
+    "# Confirming G is on the curve\n",
     "p = 2**256 - 2**32 - 977\n",
     "x = 0x79BE667EF9DCBBAC55A06295CE870B07029BFCDB2DCE28D959F2815B16F81798\n",
     "y = 0x483ADA7726A3C4655DA4FBFC0E1108A8FD17B448A68554199C47D08FFB10D4B8\n",
