--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -513,7 +513,7 @@
     "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
     "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
     "    uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
-    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
+    "    # compressed - b'\\x02'/b'\\x03' followed by x coord. 02 if y is even, 03 otherwise\n",
     "    if point.y.num % 2 == 1:\n",
     "        compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
     "    else:\n",
