fixed ecc stuff and session 2

--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,21 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(192,105) is on the curve\n",
-      "(17,56) is on the curve\n",
-      "(200,119) is not on the curve\n",
-      "(1,193) is on the curve\n",
-      "(42,99) is not on the curve\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1.1\n",
     "\n",
@@ -63,34 +51,15 @@
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
-    "    x = FieldElement(x_raw, prime)\n",
-    "    y = FieldElement(y_raw, prime)\n",
     "    # try initializing, RuntimeError means not on curve\n",
-    "    # p = Point(x, y, a, b)\n",
-    "    try:\n",
-    "        p = Point(x, y, a, b)\n",
-    "        print('({},{}) is on the curve'.format(x_raw, y_raw))\n",
-    "    except RuntimeError:\n",
-    "        print('({},{}) is not on the curve'.format(x_raw, y_raw))"
+    "    # p = Point(x, y, a, b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1.2\n",
     "\n",
@@ -117,19 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point(FieldElement_223(192),FieldElement_223(105)) + Point(FieldElement_223(17),FieldElement_223(56)) = Point(FieldElement_223(170),FieldElement_223(142))\n",
-      "Point(FieldElement_223(47),FieldElement_223(71)) + Point(FieldElement_223(117),FieldElement_223(141)) = Point(FieldElement_223(60),FieldElement_223(139))\n",
-      "Point(FieldElement_223(143),FieldElement_223(98)) + Point(FieldElement_223(76),FieldElement_223(66)) = Point(FieldElement_223(47),FieldElement_223(71))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.1\n",
     "\n",
@@ -149,33 +108,14 @@
     "    # p1 = Point(x1, y1, a, b)\n",
     "    # x2 = FieldElement(x2_raw, prime)\n",
     "    # y2 = FieldElement(y2_raw, prime)\n",
-    "    # p2 = Point(x2, y2, a, b)\n",
-    "    x1 = FieldElement(x1_raw, prime)\n",
-    "    y1 = FieldElement(y1_raw, prime)\n",
-    "    p1 = Point(x1, y1, a, b)\n",
-    "    x2 = FieldElement(x2_raw, prime)\n",
-    "    y2 = FieldElement(y2_raw, prime)\n",
-    "    p2 = Point(x2, y2, a, b)\n",
-    "    print('{} + {} = {}'.format(p1, p2, p1+p2))"
+    "    # p2 = Point(x2, y2, a, b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.2\n",
     "\n",
@@ -199,22 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point(FieldElement_223(49),FieldElement_223(71))\n",
-      "Point(FieldElement_223(64),FieldElement_223(168))\n",
-      "Point(FieldElement_223(36),FieldElement_223(111))\n",
-      "Point(FieldElement_223(194),FieldElement_223(51))\n",
-      "Point(FieldElement_223(116),FieldElement_223(55))\n",
-      "Point(infinity)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.1\n",
     "\n",
@@ -232,17 +159,10 @@
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
     "    # p = Point(x, y, a, b)\n",
-    "    x = FieldElement(x_raw, prime)\n",
-    "    y = FieldElement(y_raw, prime)\n",
-    "    p = Point(x, y, a, b)\n",
     "    # start product at 0 (point at infinity)\n",
-    "    product = Point(None, None, a, b)\n",
     "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
-    "    for _ in range(s):\n",
     "        # add the point to the product\n",
-    "        product = product + p\n",
-    "    # print product    \n",
-    "    print(product)"
+    "    # print product    "
    ]
   },
   {
@@ -267,17 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.1\n",
     "\n",
@@ -293,36 +205,18 @@
     "inf = Point(None, None, a, b)\n",
     "\n",
     "# start product at point\n",
-    "product = p\n",
     "# start counter at 1\n",
-    "counter = 1\n",
     "# loop until you get point at infinity (0)\n",
-    "while product != inf:\n",
     "    # add the point to the product\n",
-    "    product += p\n",
     "    # increment counter\n",
-    "    counter += 1\n",
-    "# print counter\n",
-    "print(counter)"
+    "# print counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.2/4.3\n",
     "\n",
@@ -332,17 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Confirgming G is on the curve\n",
     "p = 2**256 - 2**32 - 977\n",
@@ -353,17 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point(infinity)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Confirming order of G is n\n",
     "from ecc import G\n",
@@ -374,17 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point(9680241112d370b56da22eb535745d9e314380e568229e09f7241066003bc471,ddac2d377f03c201ffa0419d6596d10327d6c70313bb492ff495f946285d8f38)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Getting the public point from a secret\n",
     "from ecc import G\n",
@@ -413,20 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point(5cbdf0646e5db4eaa398f365f2ea7a0e3d419b7e0330e39ce92bddedcac4f9bc,6aebca40ba255960a3178d6d861a54dba813d0b813fde7b5a5082628087264da)\n",
-      "Point(c982196a7466fbbbb0e27a940b6af926c1a74d5ad07128c82824a11b5398afda,7a91f9eae64438afb9ce6448a1c133db2d8fb9254e4546b6f001637d50901f55)\n",
-      "Point(8f68b9d2f63b5f339239c1ad981f162ee88c5678723ea3351b7b444c9ec4c0da,662a9f2dba063986de1d90c2b6be215dbbea2cfe95510bfdf23cbf79501fff82)\n",
-      "Point(9577ff57c8234558f293df502ca4f09cbc65a6572c842b39b366f21717945116,10b49c67fa9365ad7b90dab070be339a1daf9052373ec30ffae4f72d5e66d053)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 5.1\n",
     "\n",
@@ -435,28 +294,14 @@
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
     "\n",
     "# iterate over secrets\n",
-    "for secret in secrets:\n",
-    "    # get the public point\n",
-    "    print(secret*G)"
+    "    # get the public point"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.205s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 5.2\n",
     "\n",
@@ -483,22 +328,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "049d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d56fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9\n",
-      "039d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5\n",
-      "04a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b\n",
-      "03a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5\n",
-      "04aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3\n",
-      "03aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 6.1\n",
     "\n",
@@ -507,38 +339,17 @@
     "secrets = (999**3, 123, 42424242)\n",
     "\n",
     "# iterate through secrets\n",
-    "for secret in secrets:\n",
     "    # get public point\n",
-    "    point = secret * G\n",
     "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
     "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
-    "    uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
-    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
-    "    if point.y.num % 2 == 1:\n",
-    "        compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
-    "    else:\n",
-    "        compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
-    "    print(uncompressed.hex())\n",
-    "    print(compressed.hex())"
+    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.160s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 6.2\n",
     "\n",
@@ -567,22 +378,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "148dY81A9BmdpMhvYEVznrM45kWN32vSCN\n",
-      "mieaqB68xDCtbUBYFoUNcmZNwk74xcBfTP\n",
-      "1S6g2xBJSED7Qr9CYZib5f4PYVhHZiVfj\n",
-      "mfx3y63A7TfTtXKkv7Y6QzsPFY6QCBCXiP\n",
-      "1226JSptcStqn4Yq9aAmNXdwdc2ixuH9nb\n",
-      "mgY3bVusRUL6ZB2Ss999CSrGVbdRwVpM8s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 7.1\n",
     "from ecc import G\n",
@@ -597,41 +395,20 @@
     ")\n",
     "\n",
     "# iterate through components\n",
-    "for compressed, secret in components:\n",
     "    # get the public point\n",
-    "    point = secret * G\n",
     "    # get the sec format\n",
-    "    sec = point.sec(compressed)\n",
     "    # hash160 the result\n",
-    "    h160 = hash160(sec)\n",
     "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
-    "    for prefix in (b'\\x00', b'\\x6f'):\n",
-    "        raw = prefix + h160\n",
     "        # get the double_sha256 of the prefix + h160, first 4 bytes are the checksum\n",
-    "        checksum = double_sha256(raw)[:4]\n",
     "        # append checksum\n",
-    "        total = raw + checksum\n",
-    "        # encode_base58 the whole thing\n",
-    "        print(encode_base58(total).decode('ascii'))"
+    "        # encode_base58 the whole thing\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.170s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 7.2\n",
     "\n",
@@ -652,28 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "miKegze5FQNCnGw6PKyqUbYUeBa4x2hFeM\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 8.1\n",
     "from ecc import G\n",
     "\n",
     "# use your phone number if you can't think of anything\n",
-    "secret = 1800555555518005555555\n",
     "\n",
     "# get the public point\n",
-    "point = secret*G\n",
-    "# if you completed 7.2, just do the .address(testnet=True) method on the public point\n",
-    "print(point.address(testnet=True))"
+    "# if you completed 7.2, just do the .address(testnet=True) method on the public point"
    ]
   }
  ],
