fixed a few things

--- a/session0/complete/session0.ipynb
+++ b/session0/complete/session0.ipynb
@@ -160,7 +160,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -208,7 +208,7 @@
     "Indexing bytes will get you the numerical value:\n",
     "\n",
     "```python\n",
-    "print(b'&'[0]) # 38 since & charcter #38\n",
+    "print(b'&'[0]) # 38 since & is charcter #38 \n",
     "```\n",
     "\n",
     "You can do the reverse by using bytes:\n",
@@ -517,7 +517,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
