--- a/session4.ipynb
+++ b/session4.ipynb
@@ -147,8 +147,8 @@
       "590133d8ac653229dfd8d72d2a81564502051f21554f919ae59ac27be7727451:1\n",
       "\n",
       "tx_outs:\n",
-      "42505594:1GKN6gJBgvet8S92qiQjVxEaVJ5eoJE9s2\n",
-      "6181285:1NAcHecrHaDeFSAs3nMPa98S9zw5k7xe9W\n",
+      "42505594:OP_DUP OP_HASH160 a802fc56c704ce87c42d7c92eb75e7896bdc41ae OP_EQUALVERIFY OP_CHECKSIG \n",
+      "6181285:OP_DUP OP_HASH160 e82bd75c9c662c3f5700b33fec8a676b6e9391d5 OP_EQUALVERIFY OP_CHECKSIG \n",
       "\n",
       "locktime: 0\n",
       "\n"
@@ -232,12 +232,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.509s\n",
+      "Ran 1 test in 0.338s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -327,7 +327,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 1.652s\n",
+      "Ran 1 test in 1.589s\n",
       "\n",
       "OK\n"
      ]
@@ -387,7 +387,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.576s\n",
+      "Ran 1 test in 0.314s\n",
       "\n",
       "OK\n"
      ]
