fixed mistakes from today

--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -83,13 +83,13 @@
     "\n",
     "#### 2.2. Write a program to calculate \\\\(0k, 1k, 2k, 3k, ... 30k\\\\) for some k in \\\\(F_{31}\\\\).  Notice anything about these sets?\n",
     "\n",
-    "#### 2.3. Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?\n",
-    "\n",
-    "#### 2.4. Make [these tests](/edit/session1/ecc.py) pass:\n",
+    "#### 2.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
     "ecc.py:FieldElementTest:test_mul\n",
     "ecc.py:FieldElementTest:test_pow\n",
-    "```"
+    "```\n",
+    "\n",
+    "#### Bonus. Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?"
    ]
   },
   {
@@ -131,9 +131,9 @@
    "source": [
     "# Exercise 2.3\n",
     "\n",
-    "prime = 31\n",
-    "\n",
-    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive"
+    "reload(ecc)\n",
+    "run_test(ecc.FieldElementTest('test_mul'))\n",
+    "run_test(ecc.FieldElementTest('test_pow'))"
    ]
   },
   {
@@ -142,11 +142,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.4\n",
+    "# Bonus\n",
     "\n",
-    "reload(ecc)\n",
-    "run_test(ecc.FieldElementTest('test_mul'))\n",
-    "run_test(ecc.FieldElementTest('test_pow'))"
+    "prime = 31\n",
+    "\n",
+    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive"
    ]
   },
   {
@@ -163,9 +163,7 @@
     "\n",
     "\\\\(4^{-4}\\cdot{11} = ?\\\\)\n",
     "\n",
-    "#### 3.2. Write a program to calculate \\\\(k/1, k/2, k/3, ...k/30\\\\) for some k in \\\\(F_{31}\\\\). Notice anything about these sets?\n",
-    "\n",
-    "#### 3.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
+    "#### 3.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "\n",
     "```\n",
     "ecc.py:FieldElementTest:test_div\n",
@@ -194,22 +192,6 @@
    "outputs": [],
    "source": [
     "# Exercise 3.2\n",
-    "\n",
-    "from random import randint\n",
-    "\n",
-    "prime = 31\n",
-    "k = randint(1, prime)\n",
-    "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 3.3\n",
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_div'))\n",
