--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -170,7 +170,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -227,7 +227,7 @@
     "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "\n",
     "# iterate over the multiplications\n",
-    "for s, x_raw, y_raw in multiplications:\n",
+    "for n, x_raw, y_raw in multiplications:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
@@ -238,7 +238,7 @@
     "    # start product at 0 (point at infinity)\n",
     "    product = Point(None, None, a, b)\n",
     "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
-    "    for _ in range(s):\n",
+    "    for _ in range(n):\n",
     "        # add the point to the product\n",
     "        product = product + p\n",
     "    # print product    \n",
@@ -256,10 +256,6 @@
     "#### Hint: add the point to itself until you get the point at infinity\n",
     "\n",
     "#### 4.2 Write [this test](/edit/session2/ecc.py) using the results above\n",
-    "```\n",
-    "ecc.py:ECCTest:test_rmul\n",
-    "```\n",
-    "#### 4.3 Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:ECCTest:test_rmul\n",
     "```"
@@ -324,7 +320,7 @@
     }
    ],
    "source": [
-    "# Exercise 4.2/4.3\n",
+    "# Exercise 4.2\n",
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_rmul'))"
@@ -451,7 +447,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.244s\n",
+      "Ran 1 test in 0.175s\n",
       "\n",
       "OK\n"
      ]
@@ -518,6 +514,7 @@
     "        compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
     "    else:\n",
     "        compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
+    "    # print the .hex() of both\n",
     "    print(uncompressed.hex())\n",
     "    print(compressed.hex())"
    ]
@@ -533,7 +530,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.176s\n",
+      "Ran 1 test in 0.133s\n",
       "\n",
       "OK\n"
      ]
@@ -606,8 +603,9 @@
     "    h160 = hash160(sec)\n",
     "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
     "    for prefix in (b'\\x00', b'\\x6f'):\n",
+    "        # raw is the prefix + h160\n",
     "        raw = prefix + h160\n",
-    "        # get the double_sha256 of the prefix + h160, first 4 bytes are the checksum\n",
+    "        # get the double_sha256 of the raw, first 4 bytes are the checksum\n",
     "        checksum = double_sha256(raw)[:4]\n",
     "        # append checksum\n",
     "        total = raw + checksum\n",
@@ -626,7 +624,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.187s\n",
+      "Ran 1 test in 0.131s\n",
       "\n",
       "OK\n"
      ]
