--- a/session3/complete/session3.ipynb
+++ b/session3/complete/session3.ipynb
@@ -529,7 +529,7 @@
     "bin_transaction = bytes.fromhex(hex_transaction)\n",
     "# create a stream using BytesIO()\n",
     "stream = BytesIO(bin_transaction)\n",
-    "# parse from tx\n",
+    "# Tx.parse() the stream\n",
     "t = Tx.parse(stream)\n",
     "# print tx's second input's scriptSig\n",
     "print(t.tx_ins[1].script_sig)\n",
