--- a/session3/session3.ipynb
+++ b/session3/session3.ipynb
@@ -364,7 +364,7 @@
     "\n",
     "# bytes.fromhex to get the binary representation\n",
     "# create a stream using BytesIO()\n",
-    "# parse from tx\n",
+    "# Tx.parse() the stream\n",
     "# print tx's second input's scriptSig\n",
     "# print tx's first output's scriptPubKey\n",
     "# print tx's first output's amount"
