--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -122,7 +122,11 @@
     "\n",
     "#### 3.1. Send 0.02 TBTC to this address `muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne`\n",
     "\n",
-    "#### Go here to send your transaction: https://testnet.blockexplorer.com/tx/send"
+    "#### Go here to send your transaction: https://testnet.blockexplorer.com/tx/send\n",
+    "\n",
+    "#### Bonus. Get some testnet coins and spend both outputs (one from your change address and one from the testnet faucet) to `muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne`\n",
+    "\n",
+    "#### You can get some free testnet coins at: https://testnet.coinfaucet.eu/en/"
    ]
   },
   {
@@ -132,7 +136,7 @@
    "outputs": [],
    "source": [
     "# Exercise 3.1\n",
-    "reload(tx)\n",
+    "\n",
     "from ecc import PrivateKey\n",
     "from helper import decode_base58, p2pkh_script, SIGHASH_ALL\n",
     "from script import Script\n",
@@ -148,17 +152,17 @@
     "priv = PrivateKey(secret=secret)\n",
     "\n",
     "# initialize inputs\n",
-    "# create a new tx input\n",
+    "# create a new tx input with prev_tx, prev_index, blank script_sig and max sequence\n",
     "\n",
     "# initialize outputs\n",
     "# decode the hash160 from the target address\n",
     "# convert hash160 to p2pkh script\n",
     "# convert target amount to satoshis (multiply by 100 million)\n",
-    "# create a new tx output for target\n",
+    "# create a new tx output for target with amount and script_pubkey\n",
     "# decode the hash160 from the change address\n",
     "# convert hash160 to p2pkh script\n",
     "# convert change amount to satoshis (multiply by 100 million)\n",
-    "# create a new tx output for target\n",
+    "# create a new tx output for target with amount and script_pubkey\n",
     "\n",
     "# create the transaction\n",
     "\n",
@@ -173,7 +177,54 @@
     "    raise RuntimeError('Output is not something you can spend with this private key. Check that the prev_tx and prev_index are correct')\n",
     "\n",
     "# SANITY CHECK: fee is reasonable\n",
-    "if tx_obj.fee() > 0.05*100000000 or tx_obj.fee() <= 0:\n",
+    "if tx_obj.fee(testnet=True) > 0.05*100000000 or tx_obj.fee(testnet=True) <= 0:\n",
+    "    raise RuntimeError('Check that the change amount is reasonable. Fee is {}'.format(tx_obj.fee()))\n",
+    "\n",
+    "# serialize and hex()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bonus\n",
+    "\n",
+    "from ecc import PrivateKey\n",
+    "from helper import decode_base58, p2pkh_script, SIGHASH_ALL\n",
+    "from script import Script\n",
+    "from tx import TxIn, TxOut, Tx\n",
+    "\n",
+    "prev_tx_1 = bytes.fromhex('')\n",
+    "prev_index_1 = -1\n",
+    "prev_tx_2 = bytes.fromhex('')\n",
+    "prev_index_2 = -1\n",
+    "target_address = 'muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne'\n",
+    "target_amount = -1\n",
+    "secret = 1800555555518005555555\n",
+    "priv = PrivateKey(secret=secret)\n",
+    "\n",
+    "# initialize inputs\n",
+    "# create the first tx input with prev_tx_1, prev_index_1, blank script_sig and max sequence\n",
+    "# create the second tx input with prev_tx_2, prev_index_2, blank script_sig and max sequence\n",
+    "\n",
+    "# initialize outputs\n",
+    "# decode the hash160 from the target address\n",
+    "# convert hash160 to p2pkh script\n",
+    "# convert target amount to satoshis (multiply by 100 million)\n",
+    "# create a single tx output for target with amount and script_pubkey\n",
+    "\n",
+    "# create the transaction\n",
+    "\n",
+    "# sign both inputs with the private key using SIGHASH_ALL using sign_input\n",
+    "\n",
+    "# SANITY CHECK: output's script_pubkey is the same one as your address\n",
+    "if tx_ins[0].script_pubkey(testnet=True).elements[2] != decode_base58(priv.point.address(testnet=True)):\n",
+    "    raise RuntimeError('Output is not something you can spend with this private key. Check that the prev_tx and prev_index are correct')\n",
+    "\n",
+    "# SANITY CHECK: fee is reasonable\n",
+    "if tx_obj.fee(testnet=True) > 0.05*100000000 or tx_obj.fee(testnet=True) <= 0:\n",
     "    raise RuntimeError('Check that the change amount is reasonable. Fee is {}'.format(tx_obj.fee()))\n",
     "\n",
     "# serialize and hex()"
