--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -115,13 +115,13 @@
     "\n",
     "#### 2.2. Write a program to calculate \\\\(0k, 1k, 2k, 3k, ... 30k\\\\) for some k in \\\\(F_{31}\\\\).  Notice anything about these sets?\n",
     "\n",
-    "#### 2.3. Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?\n",
-    "\n",
-    "#### 2.4. Make [these tests](/edit/session1/ecc.py) pass:\n",
+    "#### 2.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
     "ecc.py:FieldElementTest:test_mul\n",
     "ecc.py:FieldElementTest:test_pow\n",
-    "```"
+    "```\n",
+    "\n",
+    "#### Bonus. Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?"
    ]
   },
   {
@@ -179,28 +179,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Exercise 2.3\n",
-    "\n",
-    "prime = 31\n",
-    "\n",
-    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive\n",
-    "print([i**30 % prime for i in range(1, prime)])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -222,11 +200,33 @@
     }
    ],
    "source": [
-    "# Exercise 2.4\n",
+    "# Exercise 2.3\n",
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_mul'))\n",
     "run_test(ecc.FieldElementTest('test_pow'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bonus\n",
+    "\n",
+    "prime = 31\n",
+    "\n",
+    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive\n",
+    "print([i**30 % prime for i in range(1, prime)])"
    ]
   },
   {
@@ -243,9 +243,7 @@
     "\n",
     "\\\\(4^{-4}\\cdot{11} = ?\\\\)\n",
     "\n",
-    "#### 3.2. Write a program to calculate \\\\(k/1, k/2, k/3, ...k/30\\\\) for some k in \\\\(F_{31}\\\\). Notice anything about these sets?\n",
-    "\n",
-    "#### 3.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
+    "#### 3.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "\n",
     "```\n",
     "ecc.py:FieldElementTest:test_div\n",
@@ -282,31 +280,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Exercise 3.2\n",
-    "\n",
-    "from random import randint\n",
-    "\n",
-    "prime = 31\n",
-    "k = randint(1, prime)\n",
-    "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
-    "print(sorted([k*pow(i,prime-2,prime)%prime for i in range(31)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -323,7 +296,7 @@
     }
    ],
    "source": [
-    "# Exercise 3.3\n",
+    "# Exercise 3.2\n",
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_div'))\n",
