--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -154,7 +154,7 @@
     "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "\n",
     "# iterate over the multiplications\n",
-    "for s, x_raw, y_raw in multiplications:\n",
+    "for n, x_raw, y_raw in multiplications:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
@@ -176,10 +176,6 @@
     "#### Hint: add the point to itself until you get the point at infinity\n",
     "\n",
     "#### 4.2 Write [this test](/edit/session2/ecc.py) using the results above\n",
-    "```\n",
-    "ecc.py:ECCTest:test_rmul\n",
-    "```\n",
-    "#### 4.3 Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:ECCTest:test_rmul\n",
     "```"
@@ -218,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.2/4.3\n",
+    "# Exercise 4.2\n",
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_rmul'))"
@@ -342,7 +338,8 @@
     "    # get public point\n",
     "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
     "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
-    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise"
+    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
+    "    # print the .hex() of both"
    ]
   },
   {
@@ -399,9 +396,10 @@
     "    # get the sec format\n",
     "    # hash160 the result\n",
     "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
-    "        # get the double_sha256 of the prefix + h160, first 4 bytes are the checksum\n",
+    "        # raw is the prefix + h160\n",
+    "        # get the double_sha256 of raw, first 4 bytes are the checksum\n",
     "        # append checksum\n",
-    "        # encode_base58 the whole thing\n"
+    "        # encode_base58 the whole thing"
    ]
   },
   {
