fixed stuff from today

--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -536,14 +536,15 @@
     "\n",
     "# bytes.fromhex to get the binary block\n",
     "bin_block = bytes.fromhex(hex_block)\n",
-    "# double_sha256 the block\n",
-    "sha = double_sha256(bin_block)\n",
-    "# interpret the result as a number in little endian\n",
-    "proof = little_endian_to_int(sha)\n",
     "# make a stream using BytesIO\n",
     "stream = BytesIO(bin_block)\n",
     "# parse the Block\n",
     "b = Block.parse(stream)\n",
+    "\n",
+    "# double_sha256 the serialization\n",
+    "sha = double_sha256(b.serialize())\n",
+    "# interpret the result as a number in little endian\n",
+    "proof = little_endian_to_int(sha)\n",
     "# get the target\n",
     "target = b.target()\n",
     "# check proof of work < target\n",
