--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -183,12 +183,19 @@
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
     "# bytes.fromhex to get the binary block\n",
+    "bin_block = bytes.fromhex(hex_block)\n",
     "# create a stream using BytesIO\n",
+    "stream = BytesIO(bin_block)\n",
     "# parse the block\n",
+    "b = Block.parse(stream)\n",
     "# get the version\n",
+    "version = b.version\n",
     "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
+    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
     "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
-    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141"
+    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
+    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
+    "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
    ]
   },
   {
@@ -359,10 +366,11 @@
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
     "# bytes.fromhex to get the binary block\n",
-    "# double_sha256 the block\n",
-    "# interpret the result as a number in little endian\n",
     "# make a stream using BytesIO\n",
     "# parse the Block\n",
+    "\n",
+    "# double_sha256 the serialization\n",
+    "# interpret the result as a number in little endian\n",
     "# get the target\n",
     "# check proof of work < target"
    ]
